<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
<string name="code_formatted">Code formatted successfully</string>
<string name="msg_data_file_tree">Data file tree</string>
<string name="select_directory_prompt">Select a directory to mount</string>
<string name="select_directory_button">Select the table of contents</string>
<string name="error_loading_directory">Unable to load directory, please select it again (please select the com.itsaky.androidide/data directory).</string>
 <string name="select_directory_button_text">Select Directory</string>
    <string name="msg_activity_not_found">Unable to get Activity context。</string>
    <string name="msg_unsupported_characters">The file name contains unsupported characters：%s</string>
    <string name="msg_root_folder_not_found">The root folder does not exist or is not a directory：%s</string>
    <string name="msg_folder_creation_exception">Folder creation exception：%s</string>
    <string name="msg_paste_successful">The paste was successful。</string>
    <string name="msg_clipboard_empty">The clipboard is empty。</string>
    <string name="empty_history">The history is empty。</string>
    <string name="text_file">File</string>
    <string name="text_folder">Folder</string>
    <string name="checkbox_dots_to_slashes">Replace "." Convert to "/" (for multi-level folders)</string>
    <string name="msg_ui_component_not_found">Internal error: Required UI component not found in layout. Please check your app installation.</string>
    <string name="dropdown_arrow_desc">Drop-down arrow</string>
    <string name="remove_spaces_checkbox">Remove the space symbol from the input box</string>
    <string name="file_folder_name">The name of the folder or file</string>
    <string name="folder_name2">The name of the folder</string>
    <string name="msg_folder_creation_failed_for_parent">Unable to create parent folder：%s</string>
     <string name="msg_can_contain_slashesfile">The name can contain a slash (/) to create a multi-level path, or a dot (.) to create a package name path。</string>
     <string name="msg_file_creation_exception">The file was created abnormally：%s</string>
     <string name="radio_suffix_list">List of suffixes</string>
     <string name="radio_history_list">History</string>
     <string name="text_paste">stickup</string>
     <string name="action_create_file_folder">Create a file/folder</string>
    <string name="edit">Edit</string>
    <string name="copy_line">Copy Line</string>
    <string name="cut_line">Cut Line</string>
    <string name="delete_line">Delete Line</string>
    <string name="empty_line">Empty Line</string>
    <string name="replace_line">Replace Line</string>
    <string name="duplicate_line">Duplicate Line</string>
    <string name="convert_uppercase">Convert to Uppercase</string>
    <string name="convert_lowercase">Convert to Lowercase</string>
    <string name="increase_indent">Increase Indent</string>
    <string name="decrease_indent">Decrease Indent</string>
    <string name="toggle_comment">Toggle Comment</string>
    <string name="jump_to_line">Jump to Line</string>
    <string name="jump_to_line_title">Jump to Line</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="enter_something_error">Please enter something</string>
    <string name="value_out_of_range_error">Value out of range</string>
    <string name="invalid_number_error">Invalid number</string>
    <string name="wrap_text">Wrap text</string>
<string name="action_menu_edit_read_write_mode">Read-only/write-only mode</string>
<string name="action_menu_edit_previous_location">Previous row position</string>
<string name="action_menu_editnext_location">Next row position</string>
   <string name="action_format_code">Format Code</string>
    <string name="action_show_snippets">Insert Snippet…</string>
    <string name="action_show_code_outline">Code Outline</string>
  <string name="copy" tools:override="true">Copy</string>
  <string name="terminal_more">More…</string>
  <string name="text_to_search">Text to search</string>
  <string name="app_name" translatable="false">ZeroStudio</string>
  <string name="about_option_email">Email</string>
  <string name="about_option_website">Website</string>
  <string name="about_footer_alternate" translatable="false">ZeroStudio v\u2022 %s</string>
  <string name="about_footer">ZeroStudio %1$s for %2$s</string>
  <string name="about_subtitle">Simply, an IDE for Android</string>
  <string name="msg_get_package_failed">Failed to extract package name!</string>
  <string name="msg_need_help">If you\'re facing issues while using ZeroStudio or with building Android Apps, you can join the Telegram Group ask for help there.\n\nYou can also send suggesstions on our email.</string>
  <string name="title_github" translatable="false">GitHub</string>
  <string name="need_help">Need Help?</string>
  <string name="ide_preferences">IDE preferences</string>
  <string name="discussions_on_telegram">Discussions on Telegram</string>
  <string name="official_tg_channel">QQ Group</string>
  <string name="msg_empty_view">No data</string>
  <string name="title_terminal">Terminal</string>
  <string name="reset">Reset</string>
  <string name="app_logs">App Logs</string>
  <string name="ide_logs">IDE Logs</string>
  <string name="get_started">Get started</string>
  <string name="msg_cannot_perform_fix">Unable to perform quick fix</string>
  <string name="msg_performing_actions">Performing code action…</string>
  <string name="msg_api_info_since">Since API %d</string>
  <string name="msg_api_info_removed">Removed in API %d</string>
  <string name="msg_api_info_deprecated">Deprecated in API %d</string>
  <string name="msg_finding_references">Finding references…</string>
  <string name="msg_finding_definition">Finding definition…</string>
  <string name="msg_no_definition">Definition not found</string>
  <string name="msg_no_references">No references found</string>
  <string name="view_diags">Diagnostics</string>
  <string name="title_installation_failed">Installation failed</string>
  <string name="msg_picked_isnt_dir">Picked file is not a directory!</string>
  <string name="please_wait">Please wait for a moment …</string>
  <string name="title_unsupported_device">Device Not Supported</string>
  <string name="msg_unsupported_device">You are using %1$s variant of ZeroStudio on a %2$s-only device. This configuration is not supported. Please install the %2$s variant of ZeroStudio.</string>
  <string name="title_clear_output">Clear output</string>
  <string name="build_output">Build output</string>
  <string name="quick_run_debug">Quick run</string>
  <string name="msg_sync_needed">Gradle files have changed. Please rebuild your project to sync dependencies and configurations.</string>
  <string name="preparing">Preparing</string>
  <string name="preparing_first">Preparing. First build may take up to 10–15 minutes!</string>
  <string name="msg_installing_gradlew">Gradle Wrapper is not available!\nInstalling default one. Gradle v7.4 will be downloaded if necessary.</string>
  <string name="run">Run</string>
  <string name="gradle" translatable="false">Gradle</string>
  <string name="title_first_build">First Build</string>
  <string name="msg_first_build">This is the first time build after you installed ZeroStudio. First build usually takes time as Gradle downloads all dependencies and plugins. This process may take about 10–15 minutes. But this totally depends on your network connection.\n\nPlease be patient …</string>
  <string name="create_project">Create project</string>
  <string name="minimum_sdk">Minimum SDK</string>
  <string name="new_project">New project</string>
  <string name="package_name">Package name</string>
  <string name="project_app_name">App name</string>
  <string name="msg_create_new_project_greeting">Start your new awesome project!</string>
  <string name="title_confirm_open_project">Open last project?</string>
  <string name="msg_confirm_open_project">Do you want to open last opened project? Opened project was:\n%s</string>
  <string name="title_close_project">Close this project</string>
  <string name="msg_opened_project_does_not_exist">Last opened project doesn\'t exist!</string>
  <string name="msg_create_new_project">Create new project</string>
  <string name="msg_open_existing_project">Open existing project</string>
  <string name="title_confirm_project_close">Close project</string>
  <string name="msg_confirm_project_close">Are you sure you want to close this project? All started Gradle daemons will be stopped after this project is closed.</string>
  <string name="template_basic">Basic Project</string>
  <string name="template_empty">Empty project</string>
  <string name="template_navigation_drawer">Navigation drawer project</string>
  <string name="template_compose" translatable="false">Jetpack Compose</string>
  <string name="template_navigation_tabs">Bottom Navigation Activity</string>
  <string name="template_tabs">Tabbed Activity</string>
  <string name="template_no_activity">No Activity</string>
  <string name="template_no_AndroidX">No AndroidX</string>
  <string name="save">Save</string>
  <string name="menu_find">Find</string>
  <string name="menu_find_file">Find in file</string>
  <string name="menu_find_project">Find in project</string>
  <string name="msg_search_modules">Search in modules</string>
  <string name="msg_no_modules">No modules found in project</string>
  <string name="hint_find_project_filter">Filter file extensions (optional)</string>
  <string name="msg_find_project_filter">Separated by \'|\'</string>
  <string name="msg_empty_search_query">Please enter text</string>
  <string name="msg_select_search_modules">Select modules to search</string>
  <string name="msg_searching_project">Finding in project, please wait…</string>
  <string name="view_search_results">Search results</string>
  <string name="project_created_successfully">Project created successfully!</string>
  <string name="project_creation_failed">Failed to create project</string>
  <string name="msg_folder_creation_failed">Failed to create folder!</string>
  <string name="msg_file_creation_failed">Failed to create file!</string>
  <string name="msg_layout_file_creation_failed">Failed to create layout file!</string>
  <string name="msg_folder_created">Folder created successfully!</string>
  <string name="msg_file_created">File created successfully!</string>
  <string name="msg_folder_exists">Folder already exists!</string>
  <string name="msg_file_exists">File already exists!</string>
  <string name="msg_layout_file_exists">Layout file already exists!</string>
  <string name="msg_invalid_name">Invalid Name!</string>
  <string name="text_create">Create</string>
  <string name="msg_can_contain_slashes">If the path contains File separator (\'/\'), then the required (parent) directories will be created if they don\'t exist.</string>
  <string name="folder_name">Folder Name</string>
  <string name="file_name">File Name</string>
  <string name="new_name">New name</string>
  <string name="new_file">New file</string>
  <string name="create_auto_layout">Create layout file</string>
  <string name="new_java_class">New Java class</string>
  <string name="new_xml_resource">New XML resource</string>
  <string name="new_folder">New folder</string>
  <string name="title_confirm_delete">Confirm delete</string>
  <string name="msg_confirm_delete">Are you sure you want to delete:\n%s?</string>
  <string name="copied">Copied successfully!</string>
  <string name="msg_rename_file">Enter new name for file/folder.</string>
  <string name="renamed">Renamed successfully!</string>
  <string name="rename_failed">Unable to rename file!</string>
  <string name="deleted">Deleted successfully!</string>
  <string name="delete_failed">Unable to delete file!</string>
  <string name="copy_path">Copy path</string>
</resources>