<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_folder_name"
            app:hintEnabled="true"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/dropdown_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/name_input_layout"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_drop_down"
            android:contentDescription="@string/dropdown_arrow_desc" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkbox_remove_spaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_spaces_checkbox"
        android:layout_marginTop="6dp" />

    <CheckBox
        android:id="@+id/checkbox_dots_to_slashes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_dots_to_slashes"
        android:layout_marginTop="4dp" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="4dp"
    android:paddingEnd="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_paste"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"  
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_paste"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_file"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_file"
        app:layout_constraintStart_toEndOf="@id/btn_paste"
        app:layout_constraintEnd_toStartOf="@id/btn_folder"
        app:layout_constraintHorizontal_weight="1"  
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_folder"
        app:layout_constraintStart_toEndOf="@id/btn_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
